--- a/server/public/index.html
+++ b/server/public/index.html
@@ -83,6 +83,6 @@
     <script type="text/javascript" src="https://unpkg.com/fortmatic@2.0.6/dist/fortmatic.js"></script>
 
     <!-- This is our example code -->
-    <script type="text/javascript" src="./example.js"></script>
+    <script type="text/javascript" src="./MetaMaskConnector.js"></script>
   </body>
 </html>
