--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,7 +41,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-	<div id="empty" style="height:200px; width:100%">
+	<div id="buttons" style="height:200px; width:100%">
 	</div>
 </body>
 
