Added Button design.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,13 +25,14 @@
 	<title>BLXM Swap</title>
 </head>
 
-<body style="background-image: url('BloxMove.jpg');">
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-	<div id="root"></div>
-	<div id="root1"></div>
-	<!--
+<body>
+	<div style="background-image: url('BloxMove.jpg');">
+		<noscript>
+			You need to enable JavaScript to run this app.
+		</noscript>
+		<div id="root" style="margin-left: 650px;"></div>
+		<div id="root1"></div>
+		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -41,8 +42,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-	<div id="buttons" style="height:200px; width:100%">
+	<div id="empty" style="height:200px; width:100%"></div>
 	</div>
+	</div>
+	<div id="buttons" style="margin-left: 700px;"></div>
 </body>
 
 </html>
