--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,11 +26,12 @@
 </head>
 
 <body>
-	<div style="background-image: url('BloxMove.jpg');">
+	<div id="content">
 		<noscript>
 			You need to enable JavaScript to run this app.
 		</noscript>
-		<div id="root" style="margin-left: 650px;"></div>
+
+		<div id="root"></div>
 		<div id="root1"></div>
 		<!--
       This HTML file is a template.
@@ -40,12 +41,12 @@
       The build step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-	<div id="empty" style="height:200px; width:100%"></div>
-	</div>
-	</div>
-	<div id="buttons" style="margin-left: 700px;"></div>
+      To create a production bundle, use `npm run build` or `yarn build`.-->
+    
+		<div id="empty" ></div>
+		<div id="buttons"></div>
+	<div>
+
 </body>
 
 </html>
