--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
 	<title>BLXM Swap</title>
 </head>
 
-<body>
+<body style="background-image: url('BloxMove.jpg'); background-size: cover;">
 	<div id="content">
 		<noscript>
 			You need to enable JavaScript to run this app.
