--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
 		<noscript>
 			You need to enable JavaScript to run this app.
 		</noscript>
-
+		<div id="navbar"></div>
 		<div id="root"></div>
 		<div id="root1"></div>
 		<!--
