refactor + console log display

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 	<title>BLXM Swap</title>
+
 </head>
 
 <body style="background-image: url('BloxMove.jpg'); background-size: cover;">
@@ -45,6 +46,7 @@
     
 		<div id="empty" ></div>
 		<div id="buttons"></div>
+		<div id="log"></div>
 	<div>
 
 </body>
