--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,8 +32,8 @@
 			You need to enable JavaScript to run this app.
 		</noscript>
 		<div id="navbar"></div>
-		<div id="root"></div>
-		<div id="root1"></div>
+		<div style="display: block;" id="root"></div>
+		<div style="display: block;" id="root1"></div>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -45,7 +45,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.-->
     
 		<div id="empty" ></div>
-		<div id="buttons"></div>
+		<div style="display: none;" id="buttons"></div>
 		<div id="log"></div>
 	<div>
 
