--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,8 @@
 
 </head>
 
-<body style="background-image: url('BloxMove.jpg'); background-size: cover;">
+<!-- <body style="background-image: url('BloxMove.jpg'); background-size: cover;">-->
+<body >
 	<div id="content">
 		<noscript>
 			You need to enable JavaScript to run this app.
