--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,8 +27,8 @@
 </head>
 
 <!-- <body style="background-image: url('BloxMove.jpg'); background-size: cover;">-->
-<body >
-	<div id="content">
+<body style=" background-image: linear-gradient(to right, #49956a,#203a4b 95%)">
+	<div id="content" >
 		<noscript>
 			You need to enable JavaScript to run this app.
 		</noscript>
