--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,6 +35,7 @@
 		<div id="navbar"></div>
 		<div style="display: block; "id="root"></div>
 		<div style="display: block;" id="root1"></div>
+		<div style="display: none;" id="root2" ></div>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
